--- a/src/templates/beyond-dog-cat.ejs
+++ b/src/templates/beyond-dog-cat.ejs
@@ -21,7 +21,7 @@
                                 <% include ./partials/content-simple.ejs %>
                                 <%
                                     var doctors = people.content;
-                                    var divisionName = '非犬貓';
+                                    var divisionName = '特寵';
                                     var nonDogCat = [];
 
                                     for (var i = 0; i < doctors.length; i += 1) {
